--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/dotlottie-react": "^0.7.2",
+    "@tailwindcss/forms": "^0.5.7",
     "framer-motion": "^11.1.9",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
