--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/dotlottie-react": "^0.7.2",
+    "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "framer-motion": "^11.1.9",
     "lottie-react": "^2.4.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
