--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "framer-motion": "^11.1.9",
+    "leaflet": "^1.9.4",
     "lottie-react": "^2.4.0",
+    "pannellum-react": "^1.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
     "zod": "^3.23.8",
