--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@lottiefiles/dotlottie-react": "^0.7.2",
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.1.9",
     "lottie-react": "^2.4.0",
+    "openai": "^4.53.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
