--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/dotlottie-react": "^0.7.2",
+    "@mui/material": "^5.16.6",
+    "@mui/x-charts": "^7.11.1",
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.9",
