--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/dotlottie-react": "^0.7.2",
-    "@mui/material": "^5.16.6",
-    "@mui/x-charts": "^7.11.1",
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@uiw/react-markdown-preview": "^5.1.2",
@@ -28,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "rsuite": "^5.68.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
