--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@lottiefiles/dotlottie-react": "^0.7.2",
+    "@nextui-org/react": "^2.4.6",
     "@radix-ui/themes": "^3.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@uiw/react-markdown-preview": "^5.1.2",
