--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "rsuite": "^5.68.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
