--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "rsuite": "^5.68.1",
+    "slick-carousel": "^1.8.1",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
