--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "@uiw/react-markdown-preview": "^5.1.2",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.1.9",
+    "framer-motion": "^11.3.30",
     "lottie-react": "^2.4.0",
     "openai": "^4.53.2",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "recharts": "^2.12.7",
     "rsuite": "^5.68.1",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
